--- a/site/config.toml
+++ b/site/config.toml
@@ -1,10 +1,81 @@
-baseurl = "/"
-languageCode = "en-us"
-languageLang = "en"
-title = "My new Victor-Hugo site"
-theme = "cocoa"
+baseurl             = "/"
+builddrafts         = true
+canonifyurls        = true
+contentdir          = "content"
+languageCode        = "en-SG"
+lamgthantzintdir    = "lamgthantzints"
+publishdir          = "public"
+theme               = "cocoa"
+author              = "Thant Zin Oo"
+title               = "My Posts"
+pygmentsuseclasses  = true
+# disqusshortname     = "cocoaexamplesite" # Comment out to disable Disqus.
+pluralizelisttitles = false
+# googleAnalytics     = "UA-123-45"
 
-# RSS, categories and tags disabled for an easy start
-# See configuration options for more details: 
-# https://gohugo.io/getting-started/configuration/#toml-configuration
-disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
+[permalinks]
+blog  = "blog/:slug/"
+
+[[menu.main]]
+name                   = "Blog"
+weight                 = -120
+identifier             = "blog"
+url                    = "/blog/"
+
+[[menu.main]]
+name                   = "About"
+weight                 = -110
+identifier             = "about"
+url                    = "/about/"
+
+[[menu.main]]
+name                   = "Code"
+weight                 = -100
+identifier             = "code"
+url                    = "/code/"
+
+[params]
+include_rss            = true                          # include RSS <link> tag in <head> and show RSS icon
+latestpostscount       = 5                             # how many posts to display on the home page
+i18n_flags             = false                         # whether to display small country flags for available translations
+author                 = "Thant Zin Oo"
+cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
+dateform               = "Jan 2, 2006"
+dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
+description            = "thoughts & notes"
+email                  = "thantzinoo@example.space"
+extracssfiles          = [ "/css/override.css" ]       # In mgthantzinr `static` directory, add/remove files as necessary.
+faviconfile            = "img/leaf.ico"
+github                 = "//github.com/mgthantzin"
+instagram              = "//instagram.com/mgthantzin"
+px500                  = "//500px.com/username"
+lang                   = "en"
+linkedin               = "//linkedin.com/in/mgthantzin"
+noshowreadtime         = false                         # if true, don't show "<x> minutes read" in posts
+selfintro              = ""                            # appears in the site header when set to a non-empty string
+twitter                = "//twitter.com/mgthantzin"
+mastodon               = "//example.com/@mgthantzin"
+telegram               = "//t.me/mgthantzin"
+
+highlightjs            = true
+# highlightjslanguages = ["go"]                        # additional languages not included in the "common" set
+# highlightjsStyle     = "darcula"
+
+piwik                  = false                         # If true, Piwik integration is enabled
+# piwik_url            = "//www.example.com/piwik/"    # URL to mgthantzinr Piwik installation. Must End with a slash
+# piwik_id             = 2                             # Id of mgthantzinr site in Piwik
+
+gitalk                 = false
+# if gitalk is true, the following params should be set. These parameters could be retrieved from github OAuth
+gitalk_clientID        = "mgthantzinr client id"
+gitalk_clientSecret    = "mgthantzinr client secret"
+gitalk_repo            = "mgthantzinr repo url"
+gitalk_owner           = "the owner of this repo"
+gitalk_admin           = ['a', 'list', 'of', 'administrator']
+
+avatar                 = "img/profile.png" # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
+# gravatar             = ""                # gravatar hash. see https://en.gravatar.com/site/implement/hash/. do not use in the same time as avatar
+
+# The following are DEPRECATED.
+gatracker              = "XYZ" # use googleAnalytics instead
+initials               = "ad"  # displayed on single post page; deprecated in v0.3.0.
