--- a/site/config.toml
+++ b/site/config.toml
@@ -3,7 +3,7 @@ builddrafts         = true
 canonifyurls        = true
 contentdir          = "content"
 languageCode        = "en-SG"
-lamgthantzintdir    = "lamgthantzints"
+layoutdir           = "layouts"
 publishdir          = "public"
 theme               = "cocoa"
 author              = "Thant Zin Oo"
